--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 		
 		<!-- Spring JDBC -->
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
+		
+		<dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
         	<version>${org.springframework-version}</version>
