--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,6 @@
 	</servlet-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+   		<welcome-file>/aplikacia/WEB-INF/views/index.jsp</welcome-file>
 	</welcome-file-list>
-
 </web-app>
