--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,9 @@
 	<packaging>war</packaging>
 	<version>1.0.0</version>
 	<properties>
-		<java-version>1.6</java-version>
-		<org.springframework-version>3.1.1.RELEASE</org.springframework-version>
+		<java-version>1.7</java-version>
+		<org.springframework-version>3.2.5.RELEASE</org.springframework-version>
+		<org.springsecurity-version>3.1.4.RELEASE</org.springsecurity-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
 	<dependencies>
@@ -49,22 +50,22 @@
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-core</artifactId>
-		    <version>${org.springframework-version}</version>
+		    <version>${org.springsecurity-version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-config</artifactId>
-		    <version>${org.springframework-version}</version>
+		    <version>${org.springsecurity-version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-taglibs</artifactId>
-		    <version>${org.springframework-version}</version>
+		    <version>${org.springsecurity-version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-web</artifactId>
-		    <version>${org.springframework-version}</version>
+		    <version>${org.springsecurity-version}</version>
 		</dependency>
 		
 		<!-- Spring Social -->
