Upravene css, opravene spojenie s DB a dalsie
+ upravene css pre hlasku o chybajucom profile
+ do web.xml pridane vynutenie UTF8
+ upravena stranka s profilom pre podporu vytvorenia noveho profilu,
dynamicke UI podla stavu USER/PLAYER
+ vypis casu a datumu v dolnej casti po slovensky
+ aplikacny kontext - nastavenie spojenia s DB len v UTF 8 kodovani (uz
podporuje vyber/vkladanie ľščťžýáíéäúňô bez chyb)
+ pri nevyplnenom datume nespadne stranka po otvoreni profilu (null
check)
+ opravena metoda pre pridanie hraca do DB (opravene sql, pridanie
user_id)
+ moznost vytvorenia profilu po registracii, ak je profil vytvoreny
ostava klasicka uprava

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,21 @@
                 <session-timeout>30</session-timeout>   
     </session-config>  
     
+    <!-- Auto enkodovanie do UTF 8 pre server -->
+    <filter>
+	    <filter-name>charsetFilter</filter-name>
+	    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		    <init-param>
+		        <param-name>encoding</param-name>
+		        <param-value>UTF-8</param-value>
+		    </init-param>
+	</filter>
+
+	<filter-mapping>
+	    <filter-name>charsetFilter</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
+    
      <!-- Spring Security --> 
 	 <filter>  
 	  <filter-name>springSecurityFilterChain</filter-name>  
